[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma affiliations"
authors = [
    {name = "Xuyhan07"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "cli:app"

